[workspace]

resolver = '2'

members = [
    'context',
    'apint'
]


[workspace.dependencies]

init = { git = 'https://github.com/RustyYato/init.git', branch = 'main' }
thin = { git = 'https://github.com/RustyYato/init.git', branch = 'main' }
istr = { git = 'https://github.com/RustyYato/istr.git', branch = 'main' }